--- a/src/containers/Dashboard/Dashboard.module.scss
+++ b/src/containers/Dashboard/Dashboard.module.scss
@@ -3,3 +3,41 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
+.filter {
+  font-size: 32px;
+  margin: 20px;
+
+  input {
+    margin: 10px;
+  }
+}
+.modalContainer {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 10;
+
+  .modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 12px;
+    position: fixed;
+    top: 25%;
+    left: 5%;
+    z-index: 10;
+    background-color: white;
+    opacity: 1;
+    height: 50%;
+    width: 90%;
+    text-align: center;
+    border-radius: 15px;
+
+    img {
+      height: 50%;
+    }
+  }
+}
