--- a/src/containers/Dashboard/Dashboard.module.scss
+++ b/src/containers/Dashboard/Dashboard.module.scss
@@ -15,8 +15,10 @@
 .modalContainer {
   height: 100vh;
   width: 100vw;
+  top: 0;
+  left: 0;
   position: fixed;
-  background-color: rgba(255, 255, 255, 0.8);
+  background: linear-gradient(rgba(56, 55, 55, 0.5), rgba(63, 62, 62, 0.5));
   z-index: 10;
 
   .modal {
@@ -24,7 +26,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 12px;
+    font-size: 16px;
     position: fixed;
     top: 25%;
     left: 5%;
