--- a/src/containers/Dashboard/Dashboard.module.scss
+++ b/src/containers/Dashboard/Dashboard.module.scss
@@ -1,10 +1,12 @@
 .filmDisplay {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
 .filter {
+  display: flex;
+  justify-content: flex-end;
   font-size: 32px;
   margin: 20px;
 
@@ -20,6 +22,9 @@
   position: fixed;
   background: linear-gradient(rgba(56, 55, 55, 0.5), rgba(63, 62, 62, 0.5));
   z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .modal {
     display: flex;
@@ -27,15 +32,11 @@
     align-items: center;
     flex-direction: column;
     font-size: 16px;
-    position: fixed;
-    top: 25%;
-    left: 5%;
     z-index: 10;
     background-color: white;
     opacity: 1;
-    height: 50%;
-    width: 90%;
-    text-align: center;
+    width: 50%;
+    height: 80%;
     border-radius: 15px;
 
     img {
