--- a/src/containers/Dashboard/Dashboard.module.scss
+++ b/src/containers/Dashboard/Dashboard.module.scss
@@ -10,8 +10,9 @@
   flex-wrap: wrap;
 
   img {
-    height: 400px;
+    height: 350px;
     object-fit: cover;
+    object-position: top;
   }
 }
 
@@ -23,37 +24,6 @@
 
   input {
     margin-left: 10px;
-  }
-}
-
-.modalContainer {
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  position: fixed;
-  background: linear-gradient(rgba(56, 55, 55, 0.5), rgba(63, 62, 62, 0.5));
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-size: 16px;
-    z-index: 10;
-    background-color: white;
-    opacity: 1;
-    width: 90%;
-    height: 80%;
-    border-radius: 15px;
-
-    img {
-      height: 50%;
-    }
   }
 }
 
@@ -74,13 +44,5 @@
     width: 60%;
     font-size: 26px;
     min-width: 300px;
-  }
-}
-
-@media only screen and (min-width: 800px) {
-  .modalContainer {
-    .modal {
-      width: 50%;
-    }
   }
 }
