--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -11,6 +11,7 @@
   align-items: center;
 
   .modal {
+    overflow-y: scroll;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,10 +22,18 @@
     opacity: 1;
     width: 90%;
     height: 80%;
-    border-radius: 15px;
+    border-radius: 5px;
 
     img {
       height: 50%;
+    }
+
+    & > div {
+      height: 100%;
+      border: none;
+    }
+    button {
+      margin-bottom: 20px;
     }
   }
 }
