--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -13,6 +13,7 @@
   .modal {
     overflow-y: scroll;
     display: flex;
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2), 0 4px 7px rgba(0, 0, 0, 0.27);
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -35,6 +36,10 @@
     & > div {
       height: 100%;
       border: none;
+    }
+
+    .button {
+      height: 40px;
     }
   }
 }
